# spoterfy

./: .gitignore  LICENSE  README.md  pyproject.toml
spoterfy/: __init__.py  cli.py  config.py  spotify.py  utils.py
spoterfy/commands/: auth.py  devices.py  profile.py  search.py
